--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <a href="google.com" target="_blank"  >Ссылка на канал </a>
 </p>
 
-<img src="../../.vscode/любовь.jpg" width="300" alt="Любовь повсюду">
+<img src="любовь.jpg" width="300" alt="Любовь повсюду">
 
 <hr>
 
 <br>
 
-<img src="../../.vscode/котик.jpg" width="300">
+<img src="котик.jpg" width="300">
 <hr>
 
        <h2>Мои хобби</h2>
